# puppyutils

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build-release.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: cat.txt  false.txt  ls.txt  mkdir.txt  pwd.txt  true.txt  tty.txt  uname.txt  wc.txt  whoami.txt  yes.txt
src/: lib.rs  main.rs
