[package]
name = "puppyutils"
version = "0.0.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Matilde Morrone <contact@morrone.dev>"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
acumen = "0.0.3"
bitflags = "2.9.1"
itoa = "1.0.15"
rustix = { version = "1.0.7", features = [
    "process",
    "system",
    "termios",
    "fs",
    "stdio",
    "time",
] }
sap = "0.0.5"
