[package]
name = "puppyutils"
version = "0.0.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Matilde Morrone <contact@morrone.dev>"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
bitflags = "2.9.1"
itoa = "1.0.15"
sap = "0.0.5"
xenia = "0.0.4"
xenia-utils = "0.0.1"

[patch.crates-io]
# xenia = { path = "../../xenia" }
# xenia-utils = { path = "../../xenia/utils" }
