cargo-features = ["panic-immediate-abort", "trim-paths"]

[package]
name = "puppyutils"
version = "0.0.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Matilde Morrone <contact@matilde.pet>"]

[profile.release]
lto = true
codegen-units = 1
strip = true
trim-paths = true
panic = "immediate-abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
bitflags = "2.11.0"
itoa = "1.0.17"
sap = "0.1.0"
xenia = "0.1.1"
xenia-utils = "0.0.2"

[patch.crates-io]
# xenia = { path = "../../xenia" }
# xenia-utils = { path = "../../xenia/utils" }
